deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-dep
spec:
  template:
    metadata:
      labels:
        app: db
    
    spec:
      containers:
        - name: db
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"

  replicas: 1
  selector:
    matchLabels:
      app: db
