deployment-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-dep
spec:
  template:
    metadata:
      labels:
        app: result
    
    spec:
      containers:
        - name: result
          image: dockersamples/examplevotingapp_result
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
  replicas: 1
  selector:
    matchLabels:
      app: result
