service-voting.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
