ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress
spec:
  rules:
    - host: oggy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting
                port:
                  number: 80
          
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
